# tx-app-demo

./: .bazelrc  MODULE.bazel  REPO.bazel
app/1/: BUILD.bazel
