"""App demo targets module"""

module(
    name = "tx-app-demo",
    version = "0.0.0",
)

bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "emsdk", version = "5.0.4")

# emsdk - fixed 5.0.4 version (latest main changes w/o warnings and cmake issue)
git_override(
    module_name = "emsdk",
    commit = "a491c4092412c9c12d26c572fd2e7ac792e8b733",  # tx/5.0.4
    remote = "https://github.com/nick-dodonov/emsdk.git",
    strip_prefix = "bazel",
    # verbose = True,
)

# demo/test deps
bazel_dep(name = "tx-kit-ext")  # not published in private registry yet
git_override(
    module_name = "tx-kit-ext",
    remote = "https://github.com/nick-dodonov/tx-kit-ext.git",
    tag = "v/0.2.3",
)

bazel_dep(name = "tx-pkg-misc")  # not published in private registry yet
git_override(
    module_name = "tx-pkg-misc",
    remote = "https://github.com/nick-dodonov/tx-pkg-misc.git",
    tag = "v/0.1.2",
    verbose = True,
)

bazel_dep(name = "tx-pkg-aux")  # not published in private registry yet
git_override(
    module_name = "tx-pkg-aux",
    remote = "https://github.com/nick-dodonov/tx-pkg-aux.git",
    tag = "v/0.3.3",
    verbose = True,
)
